2009-10-03  Alan Modra  <amodra@bigpond.net.au>

	* ld-powerpc/tlsexe.d: Update.
	* ld-powerpc/tlsexe.r: Update.
	* ld-powerpc/tlsexetoc.d: Update.
	* ld-powerpc/tlsexetoc.r: Update.
	* ld-powerpc/tlsso.d: Update.
	* ld-powerpc/tlsso.r: Update.
	* ld-powerpc/tlstocso.d: Update.
	* ld-powerpc/tlstocso.r: Update.

2009-10-02  Alan Modra  <amodra@bigpond.net.au>

	* lib/ld-lib.exp (ld_simple_link_defsyms): New proc, adding
	powerpc-*-rtems to code setting symbols, extracted from..
	* ld-srec/srec.exp (run_srec_test): ..here.  Correct flags for sh64.
	* ld-gc/gc.exp (test_gc): Use ld_simple_link_defsyms.

2009-10-01  Ulrich Weigand  <uweigand@de.ibm.com>

	* ld-spu/icache1.d: Update to new section layout.

2009-09-28  Nick Clifton  <nickc@redhat.com>

	* ld-mips-elf/mips-elf.exp: Only run attribute tests on Linux
	targets.

2009-09-23  Jie Zhang  <jie.zhang@analog.com>

	* ld-srec/srec.exp: Add xfails for bfin-*-linux-uclibc.

2009-09-21  Alan Modra  <amodra@bigpond.net.au>

	* ld-powerpc/tlslib.s: Delete dot-symbol entry syms.  Add
	__tls_get_addr_opt.
	* ld-powerpc/tlslib32.s: Add __tls_get_addr_opt.
	* ld-powerpc/oldtlslib.s: New file, old-abi version of tlslib.s.
	* ld-powerpc/powerpc.exp: Build old-abi library and use it in
	two new link tests.
	* ld-powerpc/tlsexe.d: Update for new __tls_get_addr stub.
	* ld-powerpc/tlsexe.g, * ld-powerpc/tlsexe.r, *ld-powerpc/tlsexe32.d,
	* ld-powerpc/tlsexe32.g, * ld-powerpc/tlsexe32.r, 
	* ld-powerpc/tlsexetoc.d, * ld-powerpc/tlsexetoc.g,
	* ld-powerpc/tlsexetoc.r: Likewise.

2009-09-20  Richard Sandiford  <rdsandiford@googlemail.com>

	* ld-mips-elf/elf-rel-got-n64-linux.d: Expect BALs.
	* ld-mips-elf/elf-rel-xgot-n64-linux.d: Likewise.

2009-09-18  Alan Modra  <amodra@bigpond.net.au>

	* ld-powerpc/tlsso.d: Update.
	* ld-powerpc/tlsso.r: Update.
	* ld-powerpc/tlstocso.d: Update.
	* ld-powerpc/tlstocso.r: Update.

2009-09-15  Kaz Kojima  <kkojima@rr.iij4u.or.jp>

	* ld-elfcomm/elfcomm.exp: Add appropriate emulation option