@@ -1,3 +1,12 @@
+2009-10-19  Hans-Peter Nilsson  <hp@axis.com>
+
+	* ld-cris/tls-e-20.d, ld-cris/tls-e-20a.d, ld-cris/tls-e-22.d,
+	ld-cris/tls-e-80.d, ld-cris/tls-e-dtpoffd1.d,
+	ld-cris/tls-e-dtpoffd3.d, ld-cris/tls-ldgde-14.d,
+	ld-cris/tls-ldgde-15.d, ld-cris/tls-ldgdex-14.d,
+	ld-cris/tls-ldgdex-15.d: Adjust for change in non-shared
+	R_CRIS_32_DTPREL and R_CRIS_16_DTPREL relocations.
+
 2009-10-03  Alan Modra  <amodra@bigpond.net.au>
 
 	* ld-powerpc/tlsexe.d: Update.
